--- a/playbooks/nginx/templates/proxy.conf.j2
+++ b/playbooks/nginx/templates/proxy.conf.j2
@@ -4,7 +4,7 @@ server {
     server_name {{ domain }};
 
     location / {
-        proxy_pass http://127.0.0.1:{{ port }};
+        proxy_pass http://127.0.0.1:{{ nginx_port }};
 
         # preserve original host & client info
         proxy_set_header Host $host;
